# pg-health

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
src/pg_health/: __init__.py  checks.py  cli.py  fix.py  history.py  mcp_server.py  models.py  notify.py  suggest.py  web.py
src/pg_health/templates/: error.html  index.html  report.html
